Fixed Grade display to be nicer and to tab score out from name automatically based on name length (nice), Continued work on Asgmt constructor which went well, Started a test script/cleaned up test_grade. Just a quick little sesh while at tutoring lecture.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ tests/__pycache__/test_util.cpython-38-PYTEST.pyc
 tests/__pycache__/__init__.cpython-38.pyc
 tests/__pycache__/test_grade.cpython-38-PYTEST.pyc
 *.pyc
+tests/__pycache__/test_grade.cpython-38-PYTEST.pyc
+tests/__pycache__/test_grade.cpython-38-PYTEST.pyc
