--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-.pytest_cache/v/cache/nodeids
-.pytest_cache/v/cache/stepwise
-tests/__pycache__/__init__.cpython-38.pyc
-tests/__pycache__/test_grade.cpython-38-PYTEST.pyc
-tests/__pycache__/test_util.cpython-38-PYTEST.pyc
-tests/__pycache__/__init__.cpython-38.pyc
-tests/__pycache__/test_grade.cpython-38-PYTEST.pyc
+.pytest_cache/
+tests/__pycache__/
 *.pyc
-tests/__pycache__/test_grade.cpython-38-PYTEST.pyc
-tests/__pycache__/test_grade.cpython-38-PYTEST.pyc
